# nft-contract-tools

./: Cargo.toml  README.md
src/: burn.rs  lib.rs  mint.rs  transfer_hook.rs
tests/: approval.rs  burn.rs  common.rs  core.rs  enumeration.rs  mint.rs
tests/contracts/approval-receiver/res/: approval_receiver.wasm
tests/contracts/token-receiver/res/: token_receiver.wasm
