[package]
name = "nft-contract-tools"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.17.2"
near-sdk-contract-tools = "3.0.2"

[dev-dependencies] 
near-sdk = { version = "5.17.2", features = ["unit-testing"] }
near-workspaces = { version = "0.19.0", features = ["unstable"] }
anyhow = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
cargo-near-build = "0.3.2"
near-contract-standards = "5.17.2"
